# emotion_detection_spanish

./: .dockerignore  .gitignore  Dockerfile  README.md  example_usage.py  pyproject.toml  pytest.ini  requirements.txt
examples/: training_example.py
scripts/: train.py  upload_model.py
spanish_emotions/: __init__.py  __main__.py  detector.py  labels.py  model_loader.py  preprocessing.py  trainer.py  utils.py
tests/: test_spanish_emotions.py
